image/templates/kubernetes/kubectl/sensor-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: collector
      - podSelector:
          matchLabels:
            service: collector
      - podSelector:
          matchLabels:
            "com.stackrox.io/service": "compliance"
    ports:
    - port: 8443
      protocol: TCP
  - from:
    ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  podSelector:
    matchLabels:
      app: collector
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: compliance-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  podSelector:
    matchLabels:
      "com.stackrox.io/service": "compliance"
  policyTypes:
    - Ingress
